--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,14 +1,15 @@
 name: test react app
 on: push
 jobs:
-  runs-on: ubuntu-latest
-  steps:
-    - name: Get the repository code
-      uses: actions/checkout@v3
-    - name: Install dependecies
-      run: npm ci
-    - name: Test application
-      run: npm run test
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get the repository code
+        uses: actions/checkout@v3
+      - name: Install dependecies
+        run: npm ci
+      - name: Test application
+        run: npm run test
 
 
 
