--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -24,7 +24,7 @@ jobs:
     steps:
       - name: Get the repository code
         uses: actions/checkout@v3
-      - name: Install dependecies
+      - name: Install dependencies
         run: npm ci
       - name: build application
         run: npm run build
