--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -6,7 +6,7 @@ jobs:
     steps:
       - name: Get the repository code
         uses: actions/checkout@v3
-      - name: Install dependencies
+      - name: Install dependecies
         run: npm ci
       - name: Test application
         run: npm run test
@@ -15,9 +15,9 @@ jobs:
     steps:
       - name: Get the repository code
         uses: actions/checkout@v3
-      - name: Install dependencies
+      - name: Install dependecies
         run: npm ci
-      - name: Test application
+      - name: Lint application
         run: npm run lint
   build:
     runs-on: ubuntu-latest
