--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -7,7 +7,7 @@ jobs:
       - name: Get the repository code
         uses: actions/checkout@v3
       - name: Install dependecies
-        run: npm ci
+        run: npm install
       - name: Test application
         run: npm run test
   lint:
@@ -16,7 +16,7 @@ jobs:
       - name: Get the repository code
         uses: actions/checkout@v3
       - name: Install dependecies
-        run: npm ci
+        run: npm install
       - name: Lint application
         run: npm run lint
   build:
@@ -25,7 +25,7 @@ jobs:
       - name: Get the repository code
         uses: actions/checkout@v3
       - name: Install dependencies
-        run: npm ci
+        run: npm install
       - name: build application
         run: npm run build
       - name: deploy
