--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -1,8 +1,12 @@
 name: print pull request
-on: workflow_dispatch
+on:
+  workflow_dispatch:
+  pull-request:
+    types: [opened, edited, reopened]
+
 jobs:
   print:
     runs-on: ubuntu-latest
     steps:
       - name: print context
-        run: echo "${{ toJSON(github) }}"
+        run: echo "${{ toJSON(github.event) }}"
